# selfies-tokenizer

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
example_dataset/: metadata.json
examples/: benchmark.py  example.py
examples/example_dataset/: encoded_data.npy  index_mapping.json  metadata.json  vocab.json
selfies_tokenizer/: __init__.py  tokenizer.py  utils.py
selfies_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
